[package]
name = "testnet-regression-tests"
version = "0.0.0"
authors = ["Diem Association <opensource@diem.com>"]
repository = "https://github.com/diem/diem"
homepage = "https://diem.com"
license = "Apache-2.0"
publish = false
edition = "2021"

[dependencies]
anyhow = "1.0.52"
bcs = "0.1.2"
hex = "0.4.3"
reqwest = { version = "0.11.2", features = ["blocking", "json"], default_features = false }
serde_json = "1.0.64"
tokio = { version = "1.8.1", features = ["full"] }
diem-json-rpc-types = { path = "../types" }
diem-sdk = { path = "../../sdk" }
forge = { path = "../../testsuite/forge" }
diem-transaction-builder = { path = "../../sdk/transaction-builder" }
diem-workspace-hack = { path = "../../common/workspace-hack" }
base64="*"
rand_core="0.6.2"
assert-json-diff = "2.0.2"
